--- a/reviews.html
+++ b/reviews.html
@@ -33,6 +33,10 @@
                 <h3>Адеми</h3>
                 <p>"Идеальное место для утреннего кофе. Особенно нравится капучино и свежие круассаны. Обязательно буду возвращаться."</p>
             </div>
+            <div class="review">
+                <h3>l1mon_ch1ck</h3>
+                <p>"Рай для программистов😂"</p>
+            </div>
         </div>
 
         <div class="add-review">
